mdapi/Custom/objects/Prospect__c.object
<CustomObject>
    <fields>
        <fullName>Create_Property_Level_Box_Folders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Property Level Box Folders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credits_at_Close__c</fullName>
        <inlineHelpText>Credits at close in lieu of purchase price reduction only. Enter as a negative number.</inlineHelpText>
        <label>Credits at Close</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Converted_to_Pipeline__c</fullName>
        <description>This field is to hold the date time when the prospect was converted to pipeline.</description>
        <label>Date Converted to Pipeline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_for_Insurance_Inspection__c</fullName>
        <formula>Residence__r.Date_Submitted_for_Insurance_Inspection__c</formula>
        <inlineHelpText>This field is editable on Residence.</inlineHelpText>
        <label>Date Submitted for Insurance Inspection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Insurance_Inspection__c</fullName>
        <formula>Residence__r.Date_of_Insurance_Inspection__c</formula>
        <inlineHelpText>This field is editable on Residence.</inlineHelpText>
        <label>Date of Insurance Inspection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_Premium_to_Future_Replace__c</fullName>
        <formula>IF((Sale_Price__c) &gt; 0,
Future_Replacement_Cost__c / Sale_Price__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount / (Premium) to Future Replace</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Premium_to_Peak_Value__c</fullName>
        <formula>IF((Sale_Price__c) &gt; 0,
Previous_High_Value__c / Sale_Price__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount / (Premium) to Peak Value</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Down_Time_Est_UW__c</fullName>
        <label>Down Time Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Downtime_Assumption_months_Lease_1__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Downtime Assumption (months) - Lease 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Downtime_Assumption_months_Lease_2__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Downtime Assumption (months) - Lease 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Downtime_Assumption_months_Lease_3__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Downtime Assumption (months) - Lease 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drive_Report_Notes__c</fullName>
        <inlineHelpText>This field will be shared with Rehab and should contain information related to the Rehab Budget Est. @ UW.</inlineHelpText>
        <label>Drive Report Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drive_Report_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drive Report Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escrow_Amount__c</fullName>
        <label>Escrow Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Escrow_Cancelled_Date__c</fullName>
        <label>Escrow Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escrow_Expected_Close_Date__c</fullName>
        <label>*Escrow Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escrow_Opened_Date__c</fullName>
        <label>*Escrow Opened Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_Month__c</fullName>
        <defaultValue>60</defaultValue>
        <label>Exit Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exit_Year__c</fullName>
        <formula>Exit_Month__c/12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exp_Gross_Monthly_Rent_UW__c</fullName>
        <label>Expected Gross Monthly Rent @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Gross_Annual_Rent_UW__c</fullName>
        <formula>Exp_Gross_Monthly_Rent_UW__c *12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Gross Annual Rent @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Inflation__c</fullName>
        <defaultValue>0.03</defaultValue>
        <label>Expense Inflation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F_Property_State__c</fullName>
        <formula>Property_State__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property State (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Replacement_Cost__c</fullName>
        <formula>IF(
ISNULL(Replacement_Cost_Est_UW_OLD__c),
null,
Replacement_Cost_Est_UW_OLD__c*((1+(Replacement_Cost_Inflation__c))^(Exit_Year__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Future Replacement Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Gross_Yield_After_HOA__c</fullName>
        <formula>(( Expected_Gross_Annual_Rent_UW__c )-12*( Monthly_HOA_UW__c ))/( All_In_Cost_Est_UW__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Yield After HOA</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Yield_Est_UW__c</fullName>
        <formula>IF(All_In_Cost_Est_UW__c &gt; 0,
Expected_Gross_Annual_Rent_UW__c / All_In_Cost_Est_UW__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gross Yield = Expected Gross Annual Rent / All-In Cost Est.   Note:  The Gross Annual Rent should not include any offsets such as HOA fees.</inlineHelpText>
        <label>Gross Yield Est. @ UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HD_Budget_Walk_Notes__c</fullName>
        <label>HD Budget Walk Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HD_Budget_Walk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HD Budget Walk</label>
        <referenceTo>HD_Budget_Walk__c</referenceTo>
        <relationshipLabel>Prospect</relationshipLabel>
        <relationshipName>Prospect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HOA_Master_Community__c</fullName>
        <formula>Residence__r.HOA_Parent__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the property has both a primary HOA and a master community and those records have been linked to this property&apos;s Residence record, this field will reflect the name of the Master Community.  If you know that detail, please update on Residence record.</inlineHelpText>
        <label>HOA (Master Community)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_Master_PrePay__c</fullName>
        <inlineHelpText>Please enter the amount that will be pre-paid to the HOA  Master Community via escrow.  This amount should be the amount that will be due for the remainder of the current fiscal year.  Please ensure that the HOA is entered on the related Residence record.</inlineHelpText>
        <label>HOA (Master) PrePay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HOA_Master_Prohibits_Leasing__c</fullName>
        <formula>TEXT(Residence__r.HOA_Parent__r.Prohibits_Renters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this property is in a Master Community that we have on file and is associated to this property via the look-up field on the Residence object, this will reflect if the Master Community has strict bylaws that prohibit leasing.</inlineHelpText>
        <label>HOA Master Prohibits Leasing?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_Options__c</fullName>
        <label>*HOA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HOA_Phone__c</fullName>
        <label>HOA Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HOA_Primary_PrePay__c</fullName>
        <inlineHelpText>Please enter the amount that will be pre-paid to the primary HOA via escrow.  This amount should be the amount that will be due for the remainder of the current fiscal year.  Please ensure that the HOA is entered on the Residence record.</inlineHelpText>
        <label>HOA (Primary) PrePay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HOA_Primary__c</fullName>
        <formula>Residence__r.HOA_Primary__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If we have a record of the HOA in sf.com and it is associated with the residence record related to this prospect, it will display here.  (Note: to add an HOA, go to the Companies tab and select record type for &quot;Home Owner&apos;s Assoc.&quot;</inlineHelpText>
        <label>HOA (Primary)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_Prohibits_Leasing__c</fullName>
        <formula>TEXT(Residence__r.HOA_Primary__r.Prohibits_Renters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this property is in an HOA that we have on file and is associated to this property via the look-up field on  the Residence object, this will reflect if the HOA has strict bylaws that prohibit leasing.</inlineHelpText>
        <label>HOA Prohibits Leasing?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA__c</fullName>
        <label>HOA Name @ UW</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPA_5_Year_CAGR__c</fullName>
        <defaultValue>0.1</defaultValue>
        <label>HPA (5-Year CAGR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HPA_Cumulative_Return__c</fullName>
        <formula>IF(Market_Value_UW__c &gt; 0,
	Sale_Price__c / Market_Value_UW__c -1,
	null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPA Cumulative Return</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IH_Agent_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Contact lookup for the Broker who created this record using the Brokersite.</description>
        <inlineHelpText>This is the Contact lookup for the Broker who created this record using the Brokersite.</inlineHelpText>
        <label>Broker Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Prospect</relationshipLabel>
        <relationshipName>BrokerProspects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IH_Approval_of_Home_Inspection_Date__c</fullName>
        <label>IH Approval of Home Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IH_Approval_of_Home_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IH Approval of Home Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IH_Broker_Deal_Accept_Date__c</fullName>
        <label>IH Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IH_Broker_Deal_Acceptance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IH Acceptance of Broker Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IH_Decline_Contract_Date__c</fullName>
        <label>IH Decline Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IH_Decline_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IH Decline Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IH_Underwriting_Status_to_Agent__c</fullName>
        <label>IH to Agent Underwriting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under Review by IH Analyst</fullName>
                </value>
                <value>
                    <fullName>Review IH Analyst Notes</fullName>
                </value>
                <value>
                    <fullName>Home Inspection Approved</fullName>
                </value>
                <value>
                    <fullName>IH Counteroffer Issued</fullName>
                </value>
                <value>
                    <fullName>Offer Approved by IH</fullName>
                </value>
                <value>
                    <fullName>IH Declines</fullName>
                </value>
                <value>
                    <fullName>IH Approves to Submit Offer</fullName>
                </value>
                <value>
                    <fullName>No Activity - Record Locked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Lease_up_Cost_Est_UW__c</fullName>
        <description>Effective July 2014, Asset Mgmt. began rolling Acquisition Overhead, Initial Lease-Up Costs, and Rehab Overhead into Platform Build-Up Costs (or Allocation).  Therefore, all values in this field were changed to 0.00.  Refer to D-00013010 and its attached spreadsheet.</description>
        <formula>IF(
        ISBLANK(Exp_Gross_Monthly_Rent_UW__c), 
        null,
	 ((Exp_Gross_Monthly_Rent_UW__c*0.00*0.00+0*(1-0.00))*0.00)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Lease-up Cost Est @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inspection_Period_End_Date__c</fullName>
        <label>*Inspection Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Inspection_ID__c</fullName>
        <formula>Residence__r.Insurance_Inspection_ID__c</formula>
        <inlineHelpText>This field is editable on Residence.</inlineHelpText>
        <label>Insurance Inspection ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Inspection_Notes__c</fullName>
        <formula>Residence__r.Insurance_Inspection_Notes__c</formula>
        <inlineHelpText>This field is editable on Residence.</inlineHelpText>
        <label>Insurance Inspection Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <formula>IF(
	AND(
		ISNULL(X12_Month_LIBOR__c), 
		ISNULL(Spread__c)
	),
	null,
	(
		IF(X12_Month_LIBOR__c &gt; 0, X12_Month_LIBOR__c, 0)
		+
		IF(Spread__c &gt; 0, Spread__c, 0)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Internal_Underwriting_Complete_Date__c</fullName>
        <label>Internal Underwriting Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsConverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted to Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOI_Approved_by_Acquisitions__c</fullName>
        <formula>Bulk_Deal__r.LOI_Approved_by_Acquisitions__c</formula>
        <label>LOI Approved by Acquisitions</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LOI_Approved_by_Legal__c</fullName>
        <formula>Bulk_Deal__r.LOI_Approved_by_Legal__c</formula>
        <label>LOI Approved by Legal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lease_Term_months_Lease_1__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Lease Term (months) - Lease 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Term_months_Lease_2__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Lease Term (months) - Lease 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Term_months_Lease_3__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Lease Term (months) - Lease 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Liens_Fines_Est_UW__c</fullName>
        <defaultValue>IF( 
	OR(
		$RecordType.Name = &apos;BrokerSite&apos;,
		$RecordType.Name = &apos;Standard/REO Acquisition&apos;
	),
	0,
	null
)</defaultValue>
        <label>*Liens/Fines Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Listing_Agent_Name__c</fullName>
        <label>Listing Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listing_Agent_Phone__c</fullName>
        <label>Listing Agent Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Loan_Fees__c</fullName>
        <defaultValue>0.01</defaultValue>
        <label>Loan Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_LTV__c</fullName>
        <defaultValue>0.6</defaultValue>
        <label>Loan LTV</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lot_Sq_Ft__c</fullName>
        <label>*Lot Sq/Ft</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Property_Tax_Est_Prcnt_UW__c</fullName>
        <label>Property Tax Est. % @ UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M2_Property_Tax_Est_UW__c</fullName>
        <formula>M2_Property_Tax_Est_Prcnt_UW__c * Contract_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Tax Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_Special_Assessment_Expense_Est_UW__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Special Assessment Exp. Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mailbox_No__c</fullName>
        <formula>Residence__r.Mailbox_No__c</formula>
        <label>Mailbox No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Value_PSF_UW__c</fullName>
        <formula>IF(Square_Feet__c &gt; 0,
Market_Value_UW__c / Square_Feet__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Value PSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Value_UW__c</fullName>
        <label>*Market Value @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>This is a text field which must be converted into the lookup value before using it in Prospect or Pipeline.</description>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Inland Empire</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Bid_Price__c</fullName>
        <label>*Max Bid Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Merge_Date__c</fullName>
        <description>Applied when Residence is merged and Prospect is associated with another residence.</description>
        <label>Merge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Modified_Gross_Yield__c</fullName>
        <description>Expected Gross Annual Rent @ UW / (Contract Price +Rehab Budget Est. @ UW + Broker Expense @ UW)</description>
        <formula>Expected_Gross_Annual_Rent_UW__c / (Contract_Price__c + Rehab_Budget_Est_UW__c + Broker_Expense_Est_UW__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected Gross Annual Rent @ UW / (Contract Price +Rehab Budget Est. @ UW + Broker Expense @ UW)</inlineHelpText>
        <label>Modified Gross Yield</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_HOA_UW__c</fullName>
        <label>Monthly HOA @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>My_Prospects__c</fullName>
        <formula>IF( $User.Brokerage__c  =  Brokerage__r.Name  &amp;&amp;  NOT( ISBLANK( $User.Brokerage__c ) ) , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>My Prospects</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Closing_Amount__c</fullName>
        <formula>IF( ISBLANK(Escrow_Amount__c) ,  Contract_Price__c ,  Contract_Price__c  -  Escrow_Amount__c )</formula>
        <label>Net Closing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Contract_Escrow__c</fullName>
        <description>This field will not be on the page layout. It is on the prospect and pipeline page to be used in reports to assist with cash forecasting. (Added by JH on 1.26)</description>
        <label>Net Contract - Escrow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Sale_Price_PSF__c</fullName>
        <formula>IF((Square_Feet__c) &gt; 0,
Net_Sale_Price__c / Square_Feet__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Sale Price PSF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Sale_Price__c</fullName>
        <formula>IF(
	AND(
		ISNULL(Sale_Price__c ), 
		ISNULL(Selling_Costs__c)
	),
	null,
	(
		IF(Sale_Price__c  &gt; 0, Sale_Price__c, 0)
		+
		IF(Selling_Costs__c &gt; 0, Selling_Costs__c, 0)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Sale Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Occupied_Status_Acquisition__c</fullName>
        <label>Occupied Status @ Acquisition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Occupied</fullName>
                </value>
                <value>
                    <fullName>Vacant</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Purchased Rented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Date__c</fullName>
        <inlineHelpText>If there is an Offer Date, it determines the Fund when the property is reported.  Therefore, please be certain the date is correct before reporting the property.</inlineHelpText>
        <label>Offer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Price__c</fullName>
        <label>Offer Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Closing_Costs_Est_UW__c</fullName>
        <defaultValue>IF(
OR(
$RecordType.Name = &apos;BrokerSite&apos;,
$RecordType.Name = &apos;Trustee Acquisition&apos;
),
0,
null
)</defaultValue>
        <label>*Other Closing Costs Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Income_Inflation__c</fullName>
        <defaultValue>0.03</defaultValue>
        <label>Other Income Inflation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSA_Approved_by_Acquisitions__c</fullName>
        <formula>Bulk_Deal__r.PSA_Approved_by_Acquisitions__c</formula>
        <label>PSA Approved by Acquisitions</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSA_Approved_by_Legal__c</fullName>
        <formula>Bulk_Deal__r.PSA_Approved_by_Legal__c</formula>
        <label>PSA Approved by Legal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent_Prospect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Prospect</label>
        <referenceTo>Prospect__c</referenceTo>
        <relationshipLabel>Prospect</relationshipLabel>
        <relationshipName>Prospect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parking__c</fullName>
        <label>Parking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Car Garage</fullName>
                </value>
                <value>
                    <fullName>2 Car Garage</fullName>
                </value>
                <value>
                    <fullName>3 Car Garage</fullName>
                </value>
                <value>
                    <fullName>4 Car Garage</fullName>
                </value>
                <value>
                    <fullName>4+ Car Garage</fullName>
                </value>
                <value>
                    <fullName>1 Car Carport</fullName>
                </value>
                <value>
                    <fullName>2 Car Carport</fullName>
                </value>
                <value>
                    <fullName>3 Car Carport</fullName>
                </value>
                <value>
                    <fullName>No Parking</fullName>
                </value>
                <value>
                    <fullName>Slab</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent_Common_Element__c</fullName>
        <inlineHelpText>Represents the percent ownership in the common elements for a condo property.</inlineHelpText>
        <label>% Common Element</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Platform_Buildup_Allocation__c</fullName>
        <description>Effective July 2014, Asset Mgmt. began rolling Acquisition Overhead, Initial Lease-Up Costs, and Rehab Overhead into Platform Build-Up Costs (or Allocation).  Refer to D-00013010 and its attached spreadsheet. 
Date:2/23/2017 :- Updated as per  D-00016849</description>
        <formula>If(NOT(ISNULL(Acquisition_Basis_Est_UW__c))
&amp;&amp; DATEVALUE(CreatedDate) &lt; DATE(2017,2,1)
&amp;&amp; DATEVALUE(Residence__r.Current_Portfolio__r.CreatedDate) &lt; Date(2017,2,23) ,
(Acquisition_Basis_Est_UW__c + Title_Policy_Cost_Est_UW__c + Other_Closing_Costs_Est_UW__c + Initial_Lease_up_Cost_Est_UW__c + CFK_Est_UW__c)
*0.0316, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platform Buildup Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pool__c</fullName>
        <label>Pool</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_High_Date__c</fullName>
        <label>*Previous High Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_High_Value_PSF__c</fullName>
        <formula>IF(Square_Feet__c &gt; 0,
Previous_High_Value__c / Square_Feet__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous High Value PSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_High_Value__c</fullName>
        <label>*Previous High Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>